--- a/content/blocks/5pics/_index.html
+++ b/content/blocks/5pics/_index.html
@@ -1,7 +1,6 @@
 ---
 Title: Picture Test
 type: 3-picture-circles
-background: red
 pictures:
  - file: pic1.png
    alt: Picture 1
@@ -12,4 +11,10 @@ pictures:
  - file: pic3.png
    alt: Picture 3
    title: Third Picture
+ - file: pic4.png
+   alt: Picture 4
+   title: Fourth Picture
+ - file: pic5.png
+   alt: Picture 5
+   title: Fifth Picture
 ---
