--- a/content/blocks/3pics/_index.html
+++ b/content/blocks/3pics/_index.html
@@ -3,13 +3,13 @@ Title: Picture Test
 type: 3-picture-circles
 background: red
 pictures:
- - file: pic1.png
-   alt: Picture 1
-   title: First Picture
- - file: pic2.png
-   alt: Picture 2
-   title: Second Picture
- - file: pic3.png
-   alt: Picture 3
-   title: Third Picture
+ - file: twister.jpg
+   alt: Twister
+   title: Twister
+ - file: pumpe.jpg
+   alt: Pumpe
+   title: Pumpe
+ - file: huehner.jpeg
+   alt: Huehner
+   title: Huehner
 ---
