--- a/content/blocks/5pics/_index.html
+++ b/content/blocks/5pics/_index.html
@@ -2,19 +2,19 @@
 Title: Picture Test
 type: 5-picture-circles
 pictures:
- - file: pic1.png
-   alt: Picture 1
-   title: First Picture
- - file: pic2.png
-   alt: Picture 2
-   title: Second Picture
- - file: pic3.png
-   alt: Picture 3
-   title: Third Picture
- - file: pic4.png
-   alt: Picture 4
-   title: Fourth Picture
- - file: pic5.png
-   alt: Picture 5
-   title: Fifth Picture
+ - file: baelle.jpg
+   alt: Bälle
+   title: Bälle
+ - file: blech.jpg
+   alt: Blech
+   title: Blech
+ - file: rehe.jpeg
+   alt: Rehe
+   title: Rehe
+ - file: feuer.jpg
+   alt: Feuer
+   title: Feuer
+ - file: turnen.jpeg
+   alt: Turnen
+   title: Turnen
 ---
